[package]
name = "bevy_mod_skinned_aabb"
version = "0.3.0-rc.1"
description = "A Bevy plugin that automatically calculates AABBs for skinned meshes"
authors = ["Greeble <greeble@greeble.dev>"]
repository = "https://github.com/greeble-dev/bevy_mod_skinned_aabb"
license = "MIT OR Apache-2.0"
edition = "2024"
keywords = ["bevy"]
categories = ["game-development"]
include = ["/src", "/LICENSE-MIT", "/LICENSE-APACHE", "/README.md"]

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_asset = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_camera = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_color = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_derive = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_gizmos = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_log = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_mesh = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }
bevy_transform = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
	"cargo_bench_support",
] }
bevy = { git = "https://github.com/bevyengine/bevy", branch = "release-0.17.0" }
rand = "0.8"

[features]
# Enable performance tracing (https://github.com/bevyengine/bevy/blob/main/docs/profiling.md).
trace = []

[[bench]]
name = "benches"
harness = false
